tinyfeedicon: fix vertical align

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -1163,6 +1163,7 @@ div.fatalError textarea {
 img.feedIcon, img.tinyFeedIcon {
 	width : 16px;
 	height : 16px;
+	vertical-align : middle;
 }
 
 div#feedlistLoading, div#filterlistLoading, div#labellistLoading {
